# readers-quest-backend

./: .gitignore  LICENSE.md  README.md  __main__.py  encoder.joblib  pyproject.toml  requirements.txt  scaler.joblib  svc_model.joblib
app/: models.py  server.py
app/routes/: generate.py  grade.py  health.py
app/services/: audio_processing.py
tests/: test_audio.py  test_health.py
utils/: generate_text.py  get_current_user.py  log.py  phoneme_utils.py  types.py
